[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Fonts/FairfaxStationNF20.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/Menu/ConfigMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="ConfigMenu" type="Panel"]
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 448.0
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 99.0
margin_bottom = 44.0
text = "Language"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButton" type="OptionButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -176.0
margin_right = 304.0
margin_bottom = -148.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 56.0
margin_right = 212.0
margin_bottom = 80.0
text = "Dynamic Background"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundButton" type="CheckButton" parent="."]
margin_left = 256.0
margin_top = 48.0
margin_right = 332.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 96.0
margin_right = 103.0
margin_bottom = 118.0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenButton" type="CheckButton" parent="."]
margin_left = 256.0
margin_top = 88.0
margin_right = 332.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 136.0
margin_right = 106.0
margin_bottom = 158.0
text = "Use Touch Joystick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickButton" type="CheckButton" parent="."]
margin_left = 256.0
margin_top = 128.0
margin_right = 332.0
margin_bottom = 168.0

[node name="SensitivityLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 176.0
margin_right = 107.0
margin_bottom = 198.0
text = "Joystick Sensitivity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensitivitySlider" type="HSlider" parent="."]
margin_left = 256.0
margin_top = 176.0
margin_right = 624.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 336.0
margin_right = 384.0
margin_bottom = 368.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="LanguageButton" to="." method="_on_LanguageButton_item_selected"]
[connection signal="toggled" from="BackgroundButton" to="." method="_on_BackgroundButton_toggled"]
[connection signal="toggled" from="FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="toggled" from="JoystickButton" to="." method="_on_JoystickButton_toggled"]
[connection signal="value_changed" from="SensitivitySlider" to="." method="_on_SensitivitySlider_value_changed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
